# speed-game

./: README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/public/assets/: README.txt
client/src/: App.css  App.tsx
client/src/components/: GameComponent.tsx
client/src/game/: SpeedGame.ts  SpeedScene.ts
client/src/services/: WebSocketService.ts
client/src/types/: game.ts
server/: Cargo.toml
server/src/: main.rs
server/src/game/: mod.rs
server/src/websocket/: mod.rs
