[package]
name = "speed-game-server"
version = "0.1.0"
edition = "2021"
authors = ["Speed Game Developer"]
description = "Backend server for the Speed card game"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4", "serde"] }
